--- a/.projenrc.json
+++ b/.projenrc.json
@@ -1,4 +1,11 @@
 {
   "type": "@mikejgray/ovos-skill-projen.OVOSSkillProject",
-  "name": "skill-randomness"
+  "name": "skill-randomness",
+  "author": "Mike Gray",
+  "authorAddress": "mike@graywind.org",
+  "authorHandle": "mikejgray",
+  "repositoryUrl": "https://github.com/mikejgray/skill-randomness",
+  "packageDir": "skill_randomness",
+  "skillClass": "RandomnessSkill",
+  "license": "MIT"
 }
