--- a/.github/workflows/test_resources.yml
+++ b/.github/workflows/test_resources.yml
@@ -8,5 +8,5 @@ jobs:
     uses: openvoiceos/.github/.github/workflows/skill_test_resources.yml@feat/shared_actions1
     with:
       action_branch: feat/shared_actions1
-      python_matrix: '["3.10"]'
+      python_matrix: '[3.9, "3.10", "3.11"]'
       intent_testfile: test/test_intents.yaml
