--- a/test/test_intents.yaml
+++ b/test/test_intents.yaml
@@ -53,5 +53,10 @@ en-us:
     - pick a number between 20 and 21:
         - lower: "20"
         - upper: "21"
+  roll-common-dice.intent:
+    - roll a die
+    - roll a dice
+    - roll die
+    - roll dice
 # unmatched intents:
 #       en-us:
