--- a/.github/workflows/skill_tests.yml
+++ b/.github/workflows/skill_tests.yml
@@ -10,6 +10,8 @@ jobs:
     permissions:
       contents: read
     uses: openvoiceos/.github/.github/workflows/python_build_tests.yml@feat/shared_actions1
+    with:
+      python_matrix: '[3.9, "3.10", "3.11"]'
   skill_unit_tests:
     name: skill_unit_tests
     permissions:
@@ -18,6 +20,7 @@ jobs:
     with:
       action_branch: feat/shared_actions1
       test_location: test
+      python_matrix: '[3.9, "3.10", "3.11"]'
       is_skill: true
       # upload_coverage: true # TODO: Once this moves to the OVOS org
   skill_installation_tests:
@@ -25,4 +28,5 @@ jobs:
     with:
       runner: ubuntu-latest
       action_branch: feat/shared_actions1
-      skill_id: "skill-randomness.miikejgray" # TODO: Change when it moves to the OVOS org
+      skill_id: "skill-randomness.mikejgray" # TODO: Change when it moves to the OVOS org
+      python_matrix: '[3.9, "3.10", "3.11"]'
