--- a/.github/workflows/skill_tests.yml
+++ b/.github/workflows/skill_tests.yml
@@ -16,10 +16,6 @@ jobs:
     name: skill_unit_tests
     permissions:
       contents: read
-    uses: openvoiceos/.github/.github/workflows/pytest_file_or_dir.yml@feat/shared_actions1
+    uses: neongeckocom/.github/.github/workflows/skill_tests.yml@master
     with:
-      action_branch: feat/shared_actions1
-      test_location: test
-      python_matrix: '[3.9, "3.10", "3.11"]'
-      is_skill: true
-      # upload_coverage: true # TODO: Once this moves to the OVOS org
+      ovos_versions: '[3.9, "3.10", "3.11"]'
