--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           python -m pip install build wheel
       - name: version
-        run: echo "::set-output name=version::$(python setup.py --version)"
+        run: echo "version=$(python setup.py --version)" >> $GITHUB_OUTPUT
         id: version
       - name: Build Distribution Packages
         run: |
@@ -79,7 +79,7 @@ jobs:
       - name: Get version from setup.py
         id: get_version
         run: |
-          VERSION=$(python setup.py --version)
+          VERSION="$(python setup.py --version)"
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Create and push new branch
@@ -92,7 +92,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Variables
-          BRANCH_NAME="release-${{ env.VERSION }}"
           BASE_BRANCH="master"
           HEAD_BRANCH="release-${{ env.VERSION }}"
           PR_TITLE="Release ${{ env.VERSION }}"
