--- a/.github/workflows/publish_stable.yml
+++ b/.github/workflows/publish_stable.yml
@@ -10,7 +10,7 @@ jobs:
     secrets: inherit
     with:
       branch: "master"
-      version_file: "version.py"
+      version_file: "skill_randomness/version.py"
       setup_py: "setup.py"
       publish_release: true
 
