--- a/.github/workflows/skill_tests.yml
+++ b/.github/workflows/skill_tests.yml
@@ -3,17 +3,32 @@ on:
   pull_request: {}
   workflow_dispatch: {}
 jobs:
-  py_build_tests:
-    name: py_build_tests
-    permissions:
-      contents: read
-    uses: neongeckocom/.github/.github/workflows/python_build_tests.yml@master
-    with:
-      python_version: "3.10"
+  # skill_unit_tests:
+  #   name: skill_unit_tests
+  #   permissions:
+  #     contents: read
+  #   uses: neongeckocom/.github/.github/workflows/skill_tests.yml@master
+  #   with:
+  #     ovos_versions: '["3.10", "3.11"]'
   skill_unit_tests:
     name: skill_unit_tests
-    permissions:
-      contents: read
-    uses: neongeckocom/.github/.github/workflows/skill_tests.yml@master
-    with:
-      ovos_versions: '["3.10", "3.11"]'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Install Build Tools
+        run: |
+          python -m pip install build wheel setuptools
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt install python3-dev swig libssl-dev
+      - name: Install skill
+        run: |
+          pip install ".[test]"
+      - name: Run Skill Tests
+        run: |
+          python -m pytest tests/
