tweak unit testing

--- a/.github/workflows/skill_tests.yml
+++ b/.github/workflows/skill_tests.yml
@@ -31,4 +31,4 @@ jobs:
           pip install ".[test]"
       - name: Run Skill Tests
         run: |
-          python -m pytest tests/
+          python -m pytest test/
