--- a/.github/workflows/skill_tests.yml
+++ b/.github/workflows/skill_tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: matrix.python-version
+          python-version: ${{ matrix.python-version }}
       - name: Install Build Tools
         run: |
           python -m pip install build wheel setuptools
